feat  接入线上开发环境

--- a/app.json
+++ b/app.json
@@ -38,7 +38,7 @@
         "selectedIconPath": "/images/tab/my@highlight.png",
         "iconPath": "/images/tab/my.png",
         "pagePath": "pages/my/my",
-        "text": "我的"
+        "text": "喜欢"
       }
     ]
   },
